Crostini automatically strips '.' from gmail usernames.

|Profile|'s GetProfileUserName() can return different versions if the username
is in fact a gmail address: those with or without embedded '.'. The version
returned can change within or between sessions unpredictably. We canonicalize
the name (effectively stripping the '.' for gmail addresses).

For those unlucky users who originally created their container with a
'.'-containing gmail-based username, it will be necessary to manually add a new
user to their container with username that strips the '.'s

Bug: 840151
Change-Id: I2fceadddeb6d8a214ab3780eb5f1e6621e133a50
Reviewed-on: https://chromium-review.googlesource.com/1080473
Commit-Queue: Nicholas Verne <nverne@chromium.org>
Reviewed-by: Timothy Loh <timloh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563495}